force-app/main/default/objects/Booking_Line_Item__c/Booking_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Represents a specific seat allocation for a single flight leg within a traveler reservation itinerary.</description>
    <label>Booking Line Item</label>
    <pluralLabel>Booking Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>BLI-{00000000}</displayFormat>
        <label>Booking Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>