force-app/main/default/objects/Booking_Line_Item__c/fields/Flight_Segment__c.field-meta.xml
<CustomField>
    <fullName>Flight_Segment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The specific operational flight leg or scale associated with this seat reservation.</description>
    <label>Flight Segment</label>
    <referenceTo>Flight_Segment__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>