force-app/main/default/objects/Booking_Line_Item__c/fields/Seat_Code__c.field-meta.xml
<CustomField>
    <fullName>Seat_Code__c</fullName>
    <description>The specific alpha-numeric seat identifier inside the aircraft matrix (e.g., 12A).</description>
    <label>Seat Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>